Fix latest docs block misaligned on RTL
https://www.pivotaltracker.com/story/show/53701343

--- a/app/assets/stylesheets/frontend/views/_world_locations.scss
+++ b/app/assets/stylesheets/frontend/views/_world_locations.scss
@@ -123,6 +123,9 @@
         @include media(tablet) {
           width: 66.66%;
           clear: both;
+          @include right-to-left {
+            float: right;
+          }
         }
       }
     }
